<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen_bg"
    android:orientation="vertical"


    >
    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="52dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="62dp"
            android:paddingBottom="12dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="22sp"
            />


    </LinearLayout>

    <!-- Body -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="28dp">

        <Button
            android:id="@+id/search_button"
            style="@style/MainButton"
            android:text="@string/search"

            app:cornerRadius="@dimen/Main_buttons_rounding"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/Main_icon_padding"
            app:iconTint="@color/black"

            tools:ignore="NestedWeights,VisualLintButtonSize">

        </Button>

        <Button
            android:id="@+id/library_button"
            style="@style/MainButton"
            android:text="@string/library"

            app:cornerRadius="@dimen/Main_buttons_rounding"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/Main_icon_padding"
            app:iconTint="@color/black"

            tools:ignore="VisualLintButtonSize">

        </Button>

        <Button
            android:id="@+id/settings_button"
            style="@style/MainButton"
            android:text="@string/settings"

            app:cornerRadius="@dimen/Main_buttons_rounding"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/Main_icon_padding"

            app:iconTint="@color/black"
            tools:ignore="VisualLintButtonSize">

        </Button>

    </LinearLayout>


</LinearLayout>