<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginEnd="48dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:importantForAccessibility="no"
            android:padding="12dp"
            android:src="@drawable/arrow_back"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="86dp"
            android:paddingBottom="12dp"
            android:text="@string/settings"
            android:textColor="@color/black" />

    </LinearLayout>

    <!-- Settings -->

    <!-- Dark mode -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="44dp"
                android:text="@string/settings_darkmode"
                android:textColor="@color/screen2_font_black" />

        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:importantForAccessibility="no"
            android:paddingVertical="12dp"
            android:paddingStart="8dp"
            android:paddingEnd="12dp"
            android:src="@drawable/off"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>
    <!-- Share -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/Settings_list_padding_start"
        android:paddingTop="@dimen/Settings_list_padding_top"
        android:paddingEnd="@dimen/Settings_list_padding_end"
        android:paddingBottom="@dimen/Settings_list_padding_bottom">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/settings_share"
            android:textColor="@color/screen2_font_black" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:background="@color/white"
            android:importantForAccessibility="no"
            android:src="@drawable/share"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <!--Contact -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/Settings_list_padding_start"
        android:paddingTop="@dimen/Settings_list_padding_top"
        android:paddingEnd="@dimen/Settings_list_padding_end"
        android:paddingBottom="@dimen/Settings_list_padding_bottom">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/settings_support"
            android:textColor="@color/screen2_font_black" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:background="@color/white"
            android:importantForAccessibility="no"
            android:src="@drawable/support"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <!--EULA -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/Settings_list_padding_start"
        android:paddingTop="@dimen/Settings_list_padding_top"
        android:paddingEnd="@dimen/Settings_list_padding_end"
        android:paddingBottom="@dimen/Settings_list_padding_bottom">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/settings_EULA"
            android:textColor="@color/screen2_font_black" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:background="@color/white"
            android:importantForAccessibility="no"
            android:src="@drawable/expand"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

    </LinearLayout>
</LinearLayout>
